--- a/gal-gui/src/locale/zh_Hans.json
+++ b/gal-gui/src/locale/zh_Hans.json
@@ -1,7 +1,9 @@
 {
+    "$schema": "./schema.json",
     "dialogYes": "是",
     "dialogNo": "否",
     "newGame": "新游戏",
+    "loadRecords": "加载进度",
     "about": "关于",
     "quit": "退出",
     "quitConfirm": "退出游戏？"
