Add settings page to gui.

--- a/bins/gal-gui/src/locale/en.json
+++ b/bins/gal-gui/src/locale/en.json
@@ -4,6 +4,7 @@
     "dialogNo": "No",
     "newGame": "New game",
     "loadRecords": "Load records",
+    "settings": "Settings",
     "about": "About",
     "quit": "Quit",
     "quitConfirm": "Quit the game?"
