--- a/bins/gal-gui/src/locale/ja.json
+++ b/bins/gal-gui/src/locale/ja.json
@@ -4,6 +4,7 @@
     "dialogNo": "いいえ",
     "newGame": "始めから",
     "loadRecords": "続きから",
+    "settings": "設定",
     "about": "説明",
     "quit": "終了する",
     "quitConfirm": "ゲームを終了しますか？"
