--- a/bins/gal-gui/src/locale/zh_Hans.json
+++ b/bins/gal-gui/src/locale/zh_Hans.json
@@ -4,6 +4,7 @@
     "dialogNo": "否",
     "newGame": "新游戏",
     "loadRecords": "加载进度",
+    "settings": "设置",
     "about": "关于",
     "quit": "退出",
     "quitConfirm": "退出游戏？"
