--- a/bins/gal-gui/src/locale/en.json
+++ b/bins/gal-gui/src/locale/en.json
@@ -6,6 +6,8 @@
     "loadRecords": "Load records",
     "settings": "Settings",
     "about": "About",
+    "goHome": "Go home",
+    "goHomeConfirm": "Back to the home page?",
     "quit": "Quit",
     "quitConfirm": "Quit the game?"
 }
