--- a/bins/gal-gui/src/locale/ja.json
+++ b/bins/gal-gui/src/locale/ja.json
@@ -6,6 +6,8 @@
     "loadRecords": "続きから",
     "settings": "設定",
     "about": "説明",
+    "goHome": "ホーム",
+    "goHomeConfirm": "ホームに戻りますか？",
     "quit": "終了する",
     "quitConfirm": "ゲームを終了しますか？"
 }
