--- a/bins/gal-gui/src/locale/zh_Hans.json
+++ b/bins/gal-gui/src/locale/zh_Hans.json
@@ -6,6 +6,8 @@
     "loadRecords": "加载进度",
     "settings": "设置",
     "about": "关于",
+    "goHome": "主页",
+    "goHomeConfirm": "返回主页？",
     "quit": "退出",
     "quitConfirm": "退出游戏？"
 }
