Use CLDR to implement language matcher.

--- a/book/src/config/i18n.md
+++ b/book/src/config/i18n.md
@@ -19,7 +19,7 @@ For example, the original text (`ja`)
 \switch{止まるんじゃねぇぞ！}{$end = true}
 \switch{止まれ！}{}{false}
 ```
-could be translated as (`zh_Hans`)
+could be translated as (`zh-Hans`)
 ``` ignore
 团长！车已经准备好了！
 \switch{哦！}
