Document new ICU usage.

--- a/book/src/config/i18n.md
+++ b/book/src/config/i18n.md
@@ -1,14 +1,7 @@
 # Internationalization
 ## ICU
-The i18n feature are supported by ICU:
-
-| Platform           | Library            |
-| ------------------ | ------------------ |
-| Windows (10 1903+) | `icu.dll`          |
-| Linux              | `libicuuc.so`      |
-| macOS              | `libicucore.dylib` |
-
-We use ICU to canonicalize locale names, and choose the best fit locale for current system.
+The i18n feature are supported by [ICU4X](https://github.com/unicode-org/icu4x) with [CLDR](https://github.com/unicode-org/cldr) data.
+We use CLDR to choose the best fit locale for current system.
 
 ## Simplify translation
 The translation of the texts is always a difficult job. You don't need to copy all commands as is.
