Report error when loading.

--- a/bins/gal-gui/src/locale/en.json
+++ b/bins/gal-gui/src/locale/en.json
@@ -2,6 +2,7 @@
     "$schema": "./schema.json",
     "dialogYes": "Yes",
     "dialogNo": "No",
+    "dialogOk": "OK",
     "newGame": "New game",
     "loadRecords": "Load records",
     "settings": "Settings",
@@ -9,5 +10,6 @@
     "goHome": "Go home",
     "goHomeConfirm": "Back to the home page?",
     "quit": "Quit",
-    "quitConfirm": "Quit the game?"
+    "quitConfirm": "Quit the game?",
+    "error": "Error"
 }
