--- a/bins/gal-gui/src/locale/ja.json
+++ b/bins/gal-gui/src/locale/ja.json
@@ -2,6 +2,7 @@
     "$schema": "./schema.json",
     "dialogYes": "はい",
     "dialogNo": "いいえ",
+    "dialogOk": "OK",
     "newGame": "始めから",
     "loadRecords": "続きから",
     "settings": "設定",
@@ -9,5 +10,6 @@
     "goHome": "ホーム",
     "goHomeConfirm": "ホームに戻りますか？",
     "quit": "終了する",
-    "quitConfirm": "ゲームを終了しますか？"
+    "quitConfirm": "ゲームを終了しますか？",
+    "error": "エラー"
 }
