Add translations for new settings.

--- a/bins/ayaka-gui/src/locale/en.json
+++ b/bins/ayaka-gui/src/locale/en.json
@@ -6,6 +6,9 @@
     "newGame": "New game",
     "loadRecords": "Load records",
     "settings": "Settings",
+    "language": "Language",
+    "subLanguage": "Secondary language",
+    "none": "None",
     "about": "About",
     "goHome": "Go home",
     "goHomeConfirm": "Back to the home page?",
