--- a/bins/ayaka-gui/src/locale/ja.json
+++ b/bins/ayaka-gui/src/locale/ja.json
@@ -6,6 +6,9 @@
     "newGame": "始めから",
     "loadRecords": "続きから",
     "settings": "設定",
+    "language": "言語",
+    "subLanguage": "第二言語",
+    "none": "無し",
     "about": "説明",
     "goHome": "ホーム",
     "goHomeConfirm": "ホームに戻りますか？",
