--- a/bins/ayaka-gui/src/locale/zh_Hans.json
+++ b/bins/ayaka-gui/src/locale/zh_Hans.json
@@ -6,6 +6,9 @@
     "newGame": "新游戏",
     "loadRecords": "加载进度",
     "settings": "设置",
+    "language": "语言",
+    "subLanguage": "第二语言",
+    "none": "无",
     "about": "关于",
     "goHome": "主页",
     "goHomeConfirm": "返回主页？",
