--- a/book/src/config/i18n.md
+++ b/book/src/config/i18n.md
@@ -7,26 +7,26 @@ We use CLDR to choose the best fit locale for current system.
 The translation of the texts is always a difficult job. You don't need to copy all commands as is.
 For example, the original text (`ja`)
 ``` ignore
-\ch{rd}団長！車の用意できました！
-\switch{おう！}{$end = false}
-\switch{止まるんじゃねぇぞ！}{$end = true}
-\switch{止まれ！}{}{false}
+- bg: 0
+- \ch{rd}団長！車の用意できました！
+- switches:
+  - おう！||$end = false
+  - 止まるんじゃねぇぞ！||$end = true
+  - 止まれ！|false
 ```
 could be translated as (`zh-Hans`)
 ``` ignore
-团长！车已经准备好了！
-\switch{哦！}
-\switch{不要停下来啊！}
-\switch{停下！}
+-
+- 团长！车已经准备好了！
+- switches:
+  - 哦！
+  - 不要停下来啊！
+  - 停下！
 ```
 
 ## Fallback
 The resources, commands, and even paragraphs could be fell back, if a translated one is not apparent.
 However, some other ones couldn't be fell back.
 
-### The `\res` and `\exec` commands
-The `\res` and `\exec` commands couldn't be fell back.
-If there's no corresponding commands in the translated lines, they won't be referenced or executed. However, the `\ch` and `\switch` commands could be fell back.
-
 ### Fallback with empty text
-However, if a certain translated line is empty, it will fall back to the base language one.
+If a certain translated line is empty, it will fall back to the base language one.
