Decouple switches and exec.

--- a/book/src/config/i18n.md
+++ b/book/src/config/i18n.md
@@ -10,9 +10,9 @@ For example, the original text (`ja`)
 - bg: 0
 - \ch{rd}団長！車の用意できました！
 - switches:
-  - おう！||$end = false
-  - 止まるんじゃねぇぞ！||$end = true
-  - 止まれ！|false
+  - おう！
+  - 止まるんじゃねぇぞ！
+  - 止まれ！
 ```
 could be translated as (`zh-Hans`)
 ``` ignore
