Rewrite text parsing with nom.

--- a/book/src/config/i18n.md
+++ b/book/src/config/i18n.md
@@ -8,7 +8,7 @@ The translation of the texts is always a difficult job. You don't need to copy a
 For example, the original text (`ja`)
 ``` ignore
 - bg: 0
-- \ch{rd}団長！車の用意できました！
+- /rd//団長！車の用意できました！
 - switches:
   - おう！
   - 止まるんじゃねぇぞ！
