Fix volume captions.

--- a/bins/ayaka-gui/src/locale/en.json
+++ b/bins/ayaka-gui/src/locale/en.json
@@ -8,6 +8,9 @@
     "settings": "Settings",
     "language": "Language",
     "subLanguage": "Secondary language",
+    "bgmVolume": "BGM volume: ",
+    "voiceVolume": "Voice volume: ",
+    "videoVolume": "Video volume: ",
     "none": "None",
     "about": "About",
     "goHome": "Go home",
