--- a/bins/ayaka-gui/src/locale/ja.json
+++ b/bins/ayaka-gui/src/locale/ja.json
@@ -8,6 +8,9 @@
     "settings": "設定",
     "language": "言語",
     "subLanguage": "第二言語",
+    "bgmVolume": "BGM音量：",
+    "voiceVolume": "声量：",
+    "videoVolume": "ビデオ音量：",
     "none": "無し",
     "about": "説明",
     "goHome": "ホーム",
