--- a/bins/ayaka-gui/src/locale/zh_Hans.json
+++ b/bins/ayaka-gui/src/locale/zh_Hans.json
@@ -8,6 +8,9 @@
     "settings": "设置",
     "language": "语言",
     "subLanguage": "第二语言",
+    "bgmVolume": "背景音乐音量：",
+    "voiceVolume": "语音音量：",
+    "videoVolume": "视频音量：",
     "none": "无",
     "about": "关于",
     "goHome": "主页",
